window scrolling horizontally added to mvc

--- a/index.html
+++ b/index.html
@@ -12,40 +12,7 @@
 </head>
 
 <body>
-  <div id="app">
-    <table>
-      <tr>
-      	<th>#</th>
-        <th>A</th>
-        <th>B</th>
-        <th>C</th>
-      </tr>
-      <tr>
-      	<td>1</td>
-        <td>Peter</td>
-        <td>Griffin</td>
-        <td>$100</td>
-      </tr>
-      <tr>
-      	<td>2</td>
-        <td>Lois</td>
-        <td>Griffin</td>
-        <td>$150</td>
-      </tr>
-      <tr>
-      	<td>3</td>
-        <td>Joe</td>
-        <td>Swanson</td>
-        <td>$300</td>
-      </tr>
-      <tr>
-      	<td>4</td>
-        <td>Cleveland</td>
-        <td>Brown</td>
-        <td>$250</td>
-      </tr>
-    </table>
-  </div>
+  <div id="app"></div>
   <script src="js/main.js"></script>
 </body>
 
