--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
   <div id="app"></div>
   <script src="js/main.js"></script>
+  <noscript>Your browser does not support JavaScript!</noscript>
 </body>
 
 </html>
