added module system

--- a/test/test.html
+++ b/test/test.html
@@ -18,7 +18,7 @@
 
 <body>
 
-<script src="../js/model.js"></script>
+<!-- <script src="../js/model.js"></script> -->
 
 <!-- the script with tests (describe, it...) -->
 <script src="test.js"></script>
