--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-  <title>Excel</title>
-
+  <link rel="shortcut icon" href="img/excel-icon.png">
   <link rel="stylesheet" href="css/style.css">
+  <title>Excel</title>
 </head>
 
 <body>
   <noscript>Your browser does not support JavaScript!</noscript>
   <div id="app"></div>
-  <script src="js/main.js"></script>
+  <script src="js/lib/helpers.js"></script>
+  <script type="module" src="js/main.js"></script>
 </body>
 
 </html>
